--- a/poc/palettePOC.html
+++ b/poc/palettePOC.html
@@ -40,6 +40,6 @@
   <!-- Use CDN copies to avoid cross-root 404 when serving `poc` as Vite root -->
   <script src="https://unpkg.com/three@0.122.0/build/three.min.js"></script>
   <script src="https://unpkg.com/three@0.122.0/examples/js/controls/OrbitControls.js"></script>
-  <script src="palettePOC.clean.js"></script>
+  <script src="palettePOC.js"></script>
 </body>
 </html>
