Add support threshold slider in UI and enhance placement logic for object support

--- a/poc/palettePOC.html
+++ b/poc/palettePOC.html
@@ -32,6 +32,9 @@
       <button id="step-next">Suivant</button>
       <span id="queue-count" style="margin-left:1em;">(0)</span>
     </div>
+    <div style="margin-top:0.75em;">
+      <input id="support-threshold" type="range" min="0" max="100" step="5" value="50" style="width:300px; display:block; margin-top:0.25em;">
+    </div>
   </div>
   <div class="object-list">
     <h3>Objets sur la palette</h3>
